--- a/assignment4/src/data/templates/main-listofcategories.template.html
+++ b/assignment4/src/data/templates/main-listofcategories.template.html
@@ -1,5 +1,4 @@
-
-<a ui-sref="home"><< BACK: See Home Menu Page</a>
+<a ui-sref="home"><< BACK to Home Menu Page</a>
 
 <h2>List of Categories (view display)</h2>
 
